# MASc

./: .gitignore  CMakeLists_PCL-MASTER.txt
COACH4ASD/AutismCOACH/: ActionModule.cpp  ActionModule.h  AutismCOACH.aps  AutismCOACH.cpp  AutismCOACH.h  AutismCOACH.rc  AutismCOACH.sln  AutismCOACH.vcxproj  AutismCOACH.vcxproj.filters  AutismCOACHDoc.cpp  AutismCOACHDoc.h  AutismCOACHView.cpp  AutismCOACHView.h  CalibrateDlg.cpp  Color.cpp  (+60 more)
CSIRO-face-tracker-mfc/: CSIRO-face-tracker-mfc.sln
HDFaceBasics-D2D_works_goodForObjCalib/: FaceBasics.cpp  FaceBasics.rc  ImageRenderer.h  pose.csv
NAOAGDemo/: NAOAGDemo.sln
PCL_Kinect2Kinfu/: CMakeLists.txt
PCL_Kinect2Kinfu/include/: tsdf_volume.h  tsdf_volume.hpp
PCL_Kinect2Kinfu/src/: kinfu_app.cpp
PCL_Kinect2SDK/: CMakeLists.txt
WoZStudy/: .gitignore  WoZStudy.sln
data analysis/: analysis after annotation.txt  data analysis - rules.txt  data analysis.txt  data overview.txt  measures - 2.docx  measures.docx  meeting with alex.txt  progress.txt  proposal analysis notes.txt  thoughts for woz.txt  ~$t5.xlsx
kinfu/: CMakeLists.txt
latex_root/: 7h draft - AM comments summary.txt  7th draft - AM comments summary.txt  8th draft - AM comments summary.txt  challengesAndRecommendationTables.docx  post 7th draft todo.txt  thoughts for thesis contribution.txt  thoughts on lessons learned.txt  ut-thesis.aux  ut-thesis.bbl  ut-thesis.blg  ut-thesis.lof  ut-thesis.lot  ut-thesis.tex  ut-thesis.toc
latex_root_before/: committee comments after 6.2.txt  post 7th draft todo.txt  summary points for qualitative observations.txt  ut-thesis.aux  ut-thesis.bbl  ut-thesis.blg  ut-thesis.lof  ut-thesis.lot  ut-thesis.tex
latex_root_before_committee_rev/: committee comments after 6.2.txt  ut-thesis.aux  ut-thesis.lof  ut-thesis.lot  ut-thesis.toc
latex_root_before_defence/: ut-thesis.bbl  ut-thesis.blg  ut-thesis.lof  ut-thesis.lot
latex_root_diff/: run_this_in_terminal.txt  run_this_to_generate_diff_tex.bat  ut-thesis_diff.aux  ut-thesis_diff.lof  ut-thesis_diff.lot  ut-thesis_diff.tex  ut-thesis_diff.toc
matlab calib/: objectLocCalib.m  symbolicFindingPointClosestToLines.m  testingRotationAngles.m
misc/: hand-washing-prompts.crg  intro WoZ AG Reward.crg
(+842 files in other folders)
